[project]
name = "gnovis"
version = "0.3.0"
description = "Gnovis — persistent memory for LLMs. SQLite + FTS5 + vector search, exposed via MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
vectors = [
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
engram = "engram.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
